Atomia Public Order Page v14.1
2014-04-15 Daniel Persson <daniel.persson@atomia.com>
	- [IMPROVEMENT] Use standard configurable validation from Atomia.Web.Plugin Validation (front-end and back-end).
	- [IMPROVEMENT] Updated jQuery Validation Plugin (jquery.validate.js) to version 1.8.1
	- [IMPROVEMENT] Changed default required field message from "Mandatory" to "This field cannot be empty"
	- [IMPROVEMENT] Made VAT number an explicit visible field to fill in instead of a hidden automatically handled field.
	- [FIX] Fixed form labels referencing the correct input field ids.
	- [IMPROVEMENT] Use first name and last name for whois form (same as other addresses) and combine later.
	- [IMPROVEMENT] Made Billing fax field not hidden.
	- [IMPROVEMENT] Standardized whois form field names, ids and order.
	
	
2014-02-20 Daniel Persson <daniel.persson@atomia.com>
	- [FIX] Fixed order page not redirecting to WorldPay correctly.
	
2014-02-11 Daniel Persson <daniel.persson@atomia.com>
	- [FIX] Fixed missing credit card form for CCPayment payment method.

Atomia Public Order Page v13.11
2013-11-04 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [IMPROVEMENT] HostingProducts Lib updated to latest

Atomia Public Order Page v13.10
2013-10-23 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [FIX] Returnurl for payment is made of current url of orderpage.

Atomia Public Order Page v13.9
2013-09-26 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [FIX] Fix for DomainSpecific when there is more than one DomainSpecific item

Atomia Public Order Page v13.8
2013-08-30 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [FIX] Post number validation text
	
2013-08-23 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [FIX] GetAddressInfo route added
	
2013-08-20 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [FIX] FormatPhoneNumber changed to match number with current country code only.
	
2013-08-14 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [NEW] GetInfoAddress implemented.
