@@ -195,4 +195,10 @@
   <data name="resellerTOS_core" xml:space="preserve">
     <value>Jag intygar att kunden godkänner &lt;a onclick="JavaScript: open('Tos?rName=TOS_core' , 'messageWindow', 'toolbar=no, scrollbars=yes, width=580, height=500'); return false" href="javascript:void(0);"&gt;CORE's allmänna villkor&lt;/a&gt;.*</value>
   </data>
+  <data name="WordpressPackageDesc" xml:space="preserve">
+    <value>(En wordpressinstallation)</value>
+  </data>
+  <data name="WordpressPackage" xml:space="preserve">
+    <value>Wordpress Paket</value>
+  </data>
 </root>
