@@ -84,6 +84,14 @@ Add examples and explanations...
           <customAttribute name="resellertos" value="resellerDefaultTOS" />
         </customAttributes>
       </product>
+      <product id="pid16" articalNumber="HST-APPY" productCategory="HostingPackage" productValue="WordpressPackage" resourceKey="WordpressPackage">
+        <customAttributes>
+          <customAttribute name="PackageDesc" value="WordpressPackageDesc" />
+          <customAttribute name="tos" value="defaultTOS" />
+          <customAttribute name="resellertos" value="resellerDefaultTOS" />
+          <customAttribute name="setupfee" value="BIL-SF" />
+        </customAttributes>
+      </product>
       <!-- Additional products-->
       <product id="pid12" articalNumber="DNS-PK" productCategory="freePackage" />
       <product id="pid13" articalNumber="XSV-OD" productCategory="ownDomain" />
